# ai-cron

./: .env.example  Makefile  README.md  main.py  pyproject.toml
generation_reports/: post_1_report.json  post_2_report.json  summary_report.json
